<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    
    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/background_login_2"
        android:scaleType="fitXY"/>
    
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/img_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="VN"
        android:textStyle="bold"
        android:paddingEnd="5dp"
        android:textSize="16dp"
        android:textColor="@color/color_text"
        app:layout_constraintEnd_toStartOf="@id/img_language"
        app:layout_constraintTop_toTopOf="@id/img_logo"
        app:layout_constraintBottom_toBottomOf="@id/img_logo"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/img_language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/icon_flag_vietnam"
        android:layout_marginEnd="25dp"
        app:layout_constraintBottom_toBottomOf="@id/img_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/img_logo"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:paddingTop="20dp"
        android:paddingBottom="50dp"
        app:layout_constraintVertical_bias="0.7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/background_login_box"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textAlignment="center"
            android:textColor="@color/color_text"
            app:layout_constraintTop_toTopOf="parent"
            android:text="Chào buổi tối"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:textStyle="bold"
            android:textSize="17dp"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edt_user_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginTop="20dp"
            android:paddingTop="15dp"
            android:paddingStart="50dp"
            android:hint="@string/text_user_name"
            android:textSize="12dp"
            android:textColorHint="@color/white"
            android:gravity="center_vertical"
            android:paddingBottom="12dp"
            android:background="@drawable/background_edittext_login"
            app:layout_constraintTop_toBottomOf="@id/tv_title"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_user"
            android:layout_marginStart="15dp"
            app:layout_constraintStart_toStartOf="@id/edt_user_name"
            app:layout_constraintTop_toTopOf="@id/edt_user_name"
            app:layout_constraintBottom_toBottomOf="@id/edt_user_name"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_view_info"
            android:layout_marginEnd="15dp"
            app:layout_constraintEnd_toEndOf="@id/edt_user_name"
            app:layout_constraintTop_toTopOf="@id/edt_user_name"
            app:layout_constraintBottom_toBottomOf="@id/edt_user_name"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edt_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:paddingTop="15dp"
            android:paddingStart="50dp"
            android:hint="@string/text_password"
            android:textSize="12dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:gravity="center_vertical"
            android:paddingBottom="12dp"
            app:="@id/edt_user_name"
            android:text="Mật khẩu"
            android:layout_marginTop="20dp"
            android:background="@drawable/background_edittext_login"
            app:layout_constraintTop_toBottomOf="@id/edt_user_name"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_password"
            android:layout_marginStart="15dp"
            app:layout_constraintStart_toStartOf="@id/edt_password"
            app:layout_constraintTop_toTopOf="@id/edt_password"
            app:layout_constraintBottom_toBottomOf="@id/edt_password"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_eye"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_eye"
            android:layout_marginEnd="15dp"
            app:layout_constraintEnd_toEndOf="@id/edt_password"
            app:layout_constraintTop_toTopOf="@id/edt_password"
            app:layout_constraintBottom_toBottomOf="@id/edt_password"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_forget_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/text_forget_password"
            app:layout_constraintTop_toBottomOf="@id/edt_password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textAlignment="center"
            android:textColor="@color/color_text"
            android:textStyle="bold"
            android:layout_marginTop="20dp"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/background_button_login"
            android:text="@string/text_login"
            android:textColor="@color/white"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:paddingTop="15dp"
            android:layout_marginTop="20dp"
            android:paddingBottom="12dp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/tv_forget_password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textAlignment="center"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_login_faceid"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/background_button_login_face_id"
            android:text="@string/text_login_Face_ID"
            android:textColor="@color/color_primary"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:paddingTop="15dp"
            android:layout_marginTop="20dp"
            android:paddingBottom="12dp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/tv_login"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textAlignment="center"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:paddingTop="20dp"
        android:paddingBottom="50dp"
        app:layout_constraintVertical_bias="0.7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:background="@drawable/background_login_box"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_greeting"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textColor="@color/color_text"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/text_greeting"
            android:paddingTop="5dp"
            android:textSize="17dp"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textColor="@color/color_text"
            android:paddingTop="5dp"
            app:layout_constraintHorizontal_bias="0"
            android:text="NGO HOANG THIEN"
            app:layout_constraintTop_toBottomOf="@id/tv_greeting"
            android:textStyle="bold"
            android:textSize="20dp"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_user_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_user_switch"
            android:layout_marginEnd="25dp"
            android:layout_marginStart="20dp"
            android:padding="5dp"
            android:background="@drawable/background_circle"
            app:layout_constraintStart_toEndOf="@id/tv_name"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintBottom_toBottomOf="@id/tv_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_name"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_faceid"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/background_button_login"
            android:text="@string/text_login"
            android:textColor="@color/white"
            android:paddingTop="15dp"
            android:layout_marginTop="35dp"
            android:paddingBottom="15dp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/tv_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textAlignment="center"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_face_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_face_id"
            android:layout_marginEnd="25dp"
            android:layout_marginStart="20dp"
            android:padding="5dp"
            app:layout_constraintHorizontal_bias="0.3"
            app:layout_constraintTop_toTopOf="@id/tv_faceid"
            app:layout_constraintBottom_toBottomOf="@id/tv_faceid"
            app:layout_constraintStart_toStartOf="@id/tv_faceid"
            app:layout_constraintEnd_toEndOf="@id/tv_faceid"/>

    </androidx.constraintlayout.widget.ConstraintLayout>



    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_version"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/version_app"
        android:textColor="@color/color_text"
        app:layout_constraintBottom_toTopOf="@id/tv_claude"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_claude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_clade"
        android:paddingBottom="5dp"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintEnd_toStartOf="@id/tv_policy"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_policy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_policy"
        android:textStyle="bold"
        android:paddingBottom="5dp"
        android:textColor="@color/color_text"
        app:layout_constraintStart_toEndOf="@id/tv_claude"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>